--- a/w2/index.html
+++ b/w2/index.html
@@ -82,7 +82,7 @@
               <button class="secondary-button pure-button">Move to</button>
             </div>
           </div>
-
+          <div class="myDiv" data-include="18"></div>
           <div class="email-content-body">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -120,6 +120,7 @@
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="data.js"></script>
   </body>
 </html>
