--- a/w4/4.1/index.html
+++ b/w4/4.1/index.html
@@ -33,7 +33,9 @@
         <div class="navbar-start">
           <div class="navbar-item">
             <div class="buttons" id="categories">
-              <a href="/" class="button is-success"> Home </a>
+              <a href="/" class="button is-success" data-category="home">
+                Home
+              </a>
             </div>
           </div>
         </div>
@@ -62,7 +64,6 @@
         <p>&copy;2020</p>
       </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/6.1.0/rxjs.umd.js"></script>  
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
   </body>
 </html>
