--- a/w4/4.1/index.html
+++ b/w4/4.1/index.html
@@ -46,7 +46,7 @@
           <main
             class="column"
             style="display: flex; flex-wrap: wrap; justify-content: center"
-            id="main"
+            id="homeMain"
           ></main>
         </div>
       </div>
